add metod CRUD
